--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-<p>sup</p>
+<html>
+<head>
+<title>Mark Hay</title>
+
+<style>
+body {
+    background-color: #5e2970;
+    color: #d4d3ce;
+    font-family: monospace;
+    font-size: 16px;
+    max-width: 90%;
+    margin: auto;
+}
+
+h2 {
+    margin-top: 2em;
+}
+
+h3 {
+    margin-top: 1em;
+}
+
+code {
+    background-color: #000000;
+    border: 1px solid #d4d3ce;
+    display: block;
+    padding: 10px;
+}
+
+a, a:visited {
+    color: #e3b759;
+}
+</style>
+
+<meta charset="UTF-8">
+</head>
+<body>
+
+    <h2>Mark Hay</h2>
+    <p>Hi! I'm Mark, a software developer living in the United States, with interests in functional programming, programming languages, machine learning, and mathematics. I write primarily in Haskell.</p>
+
+    <h3>History</h3>
+    <p>I graduated from Williams College in June 2019 with a degree in Computer Science. I was also a member of the men's rowing team. </p>
+    <p>In the summer of 2018, I was an intern at <a href="http://tsurucapital.com/en/">Tsuru Capital</a> in Tokyo, Japan, where I worked on high-performance trading systems in Haskell.</p>
+    <p>From 2017-2018, I was an exchange student in the <a href="https://exeter.williams.edu/">Williams-Exeter Programme at Oxford</a>.</p>
+
+    <h3>Misc.</h3>
+    <p>My Chinese surname is 許, making my Chinese name 许马克/許馬克, though I also answer to 许自豪. The romanization "Hay" seems to come from an uncommon Hokkien pronunciation. In Japanese, I prefer 許マーク, where my surname is pronounced 「こ」.</p>
+    <p>I have some level of proficiency in Mandarin (okay-ish), Japanese (elementary), and Hokkien (very elementary.)</p>
+
+    <p><a href="https://github.com/ahaym">github</a></p>
+    <p><a href="https://www.linkedin.com/in/mark-hay-166183129/">linkedin</a></p>
+    <p><a href="cv.pdf">resume</a></p>
+    <p><a rel="me" href="https://niu.moe/@haym">mstdn</a></p>
+
+    <pre><code>-- Run this program to get my email (or just look at it, it's not that hard!)
+main :: IO ()
+main = putStrLn $ reverse "ude TOD smailliw TA 6ham"</code></pre>
+
+</body>
+</html>
