--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
     color: #dfd3ce;
     font-family: monospace;
     font-size: 16px;
-    max-width: 90%;
+    max-width: 82%;
     margin: auto;
 }
 
@@ -40,7 +40,7 @@ a, a:visited {
     <p>Hi! I'm Mark, a software developer living in the United States, with interests in functional programming, programming languages, machine learning, and mathematics. I write primarily in Haskell.</p>
 
     <h3>History</h3>
-    <p>I graduate from Williams College in June 2019 with a degree in Computer Science. I am also a member of the men's rowing team. </p>
+    <p>I graduated from Williams College in June 2019 with a degree in Computer Science. I was also a member of the men's rowing team. </p>
     <p>In the summer of 2018, I was an intern at <a href="http://tsurucapital.com/en/">Tsuru Capital</a> in Tokyo, Japan, where I worked on high-performance trading systems in Haskell.</p>
     <p>From 2017-2018, I was an exchange student in the <a href="https://exeter.williams.edu/">Williams-Exeter Programme at Oxford</a>.</p>
 
