--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ a, a:visited {
 
     <pre><code>-- Run this program to get my email (or just look at it, it's not that hard!)
 main :: IO ()
-main = putStrLn (reverse "ude TOD smailliw TA 6ham")</code></pre>
+main = putStrLn (reverse "em.myah@kram")</code></pre>
 
 </body>
 </html>
