--- a/stpg.html
+++ b/stpg.html
@@ -144,7 +144,8 @@ text-align: center;
 <div class='general' id='test'><p class='sub'>general_</p>
 <a href='https://gmail.com' class='alink'>gmail</a>
 <a href='https://mail.protonmail.com/inbox' class='alink'>proton</a>
-<a href='http://kittenwar.com' class='alink'>kw</a>
+<a href='https://chase.com' class='alink'>chase</a>
+<a href='https://fidelity.com' class='alink'>fid</a>
 </div>
 
 <div class='social'><p class='sub'>social_</p>
@@ -156,6 +157,7 @@ text-align: center;
 <div class='ch'><p class='sub'>g_</p>
 <a href='https://github.com' class='alink'>gh</a>
 <a href='https://leetcode.com' class='alink'>lc</a>
+<a href='http://kittenwar.com' class='alink'>kw</a>
 </div>
 <p></p>
 <p></p>
