--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <style>
 body {
-    background-color: #500064;
-    color: #dfd3ce;
+    background-color: #554570;
+    color: #efefef;
     font-family: monospace;
     font-size: 16px;
     max-width: 82%;
