--- a/index.html
+++ b/index.html
@@ -1,41 +1,10 @@
 <html>
 <head>
 <title>Mark Hay</title>
-
-<style>
-body {
-    background-color: #554570;
-    color: #efefef;
-    font-family: monospace;
-    font-size: 16px;
-    max-width: 82%;
-    margin: auto;
-}
-
-h2 {
-    margin-top: 2em;
-}
-
-h3 {
-    margin-top: 1em;
-}
-
-code {
-    background-color: #000000;
-    border: 1px solid #dfd3ce;
-    display: block;
-    padding: 10px;
-}
-
-a, a:visited {
-    color: #e3b759;
-}
-</style>
-
+<link rel="stylesheet" type="text/css" href="s.css">
 <meta charset="UTF-8">
 </head>
 <body>
-
     <h2>Mark Hay</h2>
     <p>Hi! I'm Mark, a software developer living in the United States, with interests in functional programming, programming languages, machine learning, and mathematics. I write primarily in Haskell.</p>
 
@@ -56,6 +25,5 @@ a, a:visited {
     <pre><code>-- Run this program to get my email (or just look at it, it's not that hard!)
 main :: IO ()
 main = putStrLn (reverse "em.myah@kram")</code></pre>
-
 </body>
 </html>
