--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Mark Hay</h2>
-    <p>Hi! I'm Mark, a software developer living in the United States, with interests in functional programming, programming languages, machine learning, and mathematics. I write primarily in Haskell.</p>
+    <p>Hi! I'm Mark, a programmer living in the United States. My interests are in functional programming, programming languages, machine learning, and mathematics. I write primarily in Haskell.</p>
 
     <h3>History</h3>
     <p>I graduated from Williams College in June 2019 with a degree in Computer Science. I was also a member of the men's rowing team. </p>
