--- a/asya.html
+++ b/asya.html
@@ -25,6 +25,6 @@
 <img src="asya.png" class="hm"/>
 <h1>Happy Birth day Anastasia!</h1>
 <h2>from Tethics</h2>
-<audio controls autoplay><source src="international.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="international.mp3" type="audio/mpeg"></audio>
 </body>
 </html>
